fix: Fix my-contact alignment for mobile

--- a/001-web-portfolio/css/style.css
+++ b/001-web-portfolio/css/style.css
@@ -229,7 +229,7 @@ fieldset {
 .my-contact {
   order: 1;
   width: 100%;
-  text-align: left;
+  text-align: center;
 }
 
 .contact-us {
@@ -260,6 +260,7 @@ fieldset {
     width: 50%;
     font-size: 24px;
     margin-right: 20px;
+    text-align: left;
   }
 
   .contact-us {
@@ -292,6 +293,7 @@ fieldset {
     width: 50%;
     font-size: 24px;
     margin-right: 20px;
+    text-align: left;
   }
 
   .contact-us {
